deployment/kubeflow/pipelines/ml-pipeline-ui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui
spec:
  template:
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: ml-pipeline-ui-configmap
      containers:
      - name: ml-pipeline-ui
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline
spec:
  template:
    metadata:
      labels:
        app: ml-pipeline
    spec:
      containers:
        - env:
            - name: OBJECTSTORECONFIG_SECURE
              value: "true"
            - name: OBJECTSTORECONFIG_BUCKETNAME
              valueFrom:
                configMapKeyRef:
                  name: pipeline-install-config
                  key: bucketName
            - name: OBJECTSTORECONFIG_HOST
              valueFrom:
                configMapKeyRef:
                  name: pipeline-install-config
                  key: minioServiceHost
            - name: OBJECTSTORECONFIG_PORT
              valueFrom:
                configMapKeyRef:
                  name: pipeline-install-config
                  key: minioServicePort
            - name: OBJECTSTORECONFIG_REGION
              value: "us-east-1"
          name: ml-pipeline-api-server
